<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context=".ui.BottomSheetFragment">
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_product_details"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/lavender"
        android:layout_marginBottom="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="10dp">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="10dp"
            android:hint="@string/enter_product_name"
            android:background="@null"
            android:inputType="text" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="10dp">
        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinnerProductType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="10dp">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etTax"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="10dp"
            android:hint="@string/enter_tax_amount"
            android:background="@null"
            android:inputType="numberDecimal" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="10dp">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="10dp"
            android:hint="@string/enter_price"
            android:background="@null"
            android:inputType="numberDecimal" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:visibility="gone"
                android:layout_margin="5dp"
                android:layout_gravity="center"
                android:id="@+id/ivProduct"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:id="@+id/btnDelete"
                android:layout_gravity="center"
                android:backgroundTint="@color/lavender"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/remove_image"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/btnUploadImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:backgroundTint="@color/lavender"
                        android:layout_marginVertical="5dp"
                        android:src="@drawable/baseline_add_a_photo_24"
                        />
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/take_photo"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_marginBottom="5dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/btnUpload"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:backgroundTint="@color/lavender"
                        android:layout_marginVertical="5dp"
                        android:src="@drawable/baseline_add_to_photos_24"
                        />
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/take_photo_gallery"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_marginBottom="5dp"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnAdd"
        android:layout_gravity="center"
        android:backgroundTint="@color/lavender"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/add_product"
        />
    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:visibility="gone"
        android:id="@+id/progress"/>








</LinearLayout>